--- a/NeuralNetsPrediction.ipynb
+++ b/NeuralNetsPrediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -11,7 +11,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last file loaded: data/final/2017-01-24.csv\n",
+      "Last file loaded: data/final/2017-01-25.csv\n",
       "Test file data/final/2017-01-25.csv\n",
       "Predict file data/final/2017-01-26.csv\n",
       "Out file data/final2/2017-01-26.csv\n"
@@ -39,7 +39,7 @@
     "\n",
     "dftrain = pd.DataFrame()\n",
     "\n",
-    "for _file in allFiles[:-2]:\n",
+    "for _file in allFiles[:-1]:\n",
     "        try:\n",
     "            t = pd.read_csv(_file,header=0)\n",
     "            if len(t[(t[\"fvalue\"].isnull())]) > 0:\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "metadata": {
     "collapsed": true
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {
     "collapsed": true
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 59,
    "metadata": {
     "collapsed": true
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -157,7 +157,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "accuracy 0.871428571429\n"
+      "accuracy 0.95\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -200,7 +200,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "time taken 177.0226399898529 seconds\n"
+      "time taken 226.35742020606995 seconds\n"
      ]
     }
    ],
@@ -211,11 +211,18 @@
     "start = time()\n",
     "\n",
     "model = Sequential()\n",
-    "model.add(Dense(32, input_dim=len(features), init='normal', activation='relu'))\n",
+    "model.add(Dense(16, input_dim=len(features), init='normal', activation='relu'))\n",
+    "model.add(Dense(8, activation='relu'))\n",
     "model.add(Dense(1, init='normal', activation='relu'))\n",
     "          \n",
     "model.compile(optimizer='adam', metrics=['accuracy'],loss=\"mae\")\n",
-    "\n",
+    "# MAE 89% 16 - 8 -1  Adam\n",
+    "# MAE 87% Normal Adam Dense 32\n",
+    "# MSE 81%\n",
+    "# MAPE 35%\n",
+    "# MSLE 53%\n",
+    "# HINGE 34%\n",
+    "# SGD MSE 150 70%\n",
     "model.fit(X_train, y_train,\n",
     "          validation_data=(X_test,y_test),\n",
     "          verbose=False,\n",
@@ -226,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +242,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 32/280 [==>...........................] - ETA: 0sacc: 35.71%\n"
+      " 32/280 [==>...........................] - ETA: 0sacc: 38.93%\n"
      ]
     }
    ],
@@ -246,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -255,7 +262,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.878571428571\n"
+      "0.896428571429\n"
      ]
     }
    ],
@@ -472,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
@@ -491,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 65,
    "metadata": {
     "collapsed": true
    },
@@ -505,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -525,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
