Updated PlayerNews and Score retrieval

--- a/CalculatePlayer.ipynb
+++ b/CalculatePlayer.ipynb
@@ -2066,7 +2066,7 @@
    },
    "outputs": [],
    "source": [
-    "req = \"http://data.nba.net/prod/v2/2016/schedule.json\"\n",
+    "req = \"http://stats.nba.com/stats/playergamelog\"\n",
     "\n",
     "with urllib.request.urlopen(req) as url:\n",
     "     _recap = json.loads(url.read().decode())\n"
